feat: improved authentication for api
